@@ -1,3 +1,15 @@
+2012-07-19  Patrick Gansterer  <paroga@webkit.org>
+
+        [WIN] Fix compilation of JSGlobalData.h with ENABLE(DFG_JIT)
+        https://bugs.webkit.org/show_bug.cgi?id=91243
+
+        Reviewed by Geoffrey Garen.
+
+        Disable MSVC warning 4200 "zero-sized array in struct/union" for JSC::ScratchBuffer.
+
+        * runtime/JSGlobalData.h:
+        (JSC):
+
 2012-07-19  Mark Lam  <mark.lam@apple.com>
 
         Fixed broken ENABLE_JIT=0 build.
